--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "dancing-link",
   "version": "1.0.0",
   "private": false,
-	"license": "MIT",
+  "license": "MIT",
   "scripts": {
+    "lib": "webpack",
     "test": "mochapack \"test/**/**.test.js\""
   },
   "dependencies": {
@@ -12,12 +13,13 @@
   "devDependencies": {
     "chai": "^4.3.4",
     "eslint": "^6.7.2",
-    "eslint-config-prettier": "^8.1.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.1.1",
     "mocha": "^8.3.2",
     "mochapack": "^2.0.6",
     "prettier": "^1.19.1",
-    "webpack": "^4.46.0"
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.6.0"
   }
 }
