--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 
-# Set default charset  对于所有的js,py文件，设置文件字符集为utf-8
-[*.{js,vue}]
+# Set default charset  对于所有的js文件，设置文件字符集为utf-8
+[*.{js}]
 charset = utf-8
 indent_style = tab
