--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.1.1",
+    "babel-plugin-module-resolver": "^4.1.0",
     "fs-extra": "^10.0.0",
     "mocha": "^8.3.2",
     "mochapack": "^2.0.6",
